--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
           <ul>
             <li>
               <a href="#"> 
-                <svg class="icon" version="1.1"  xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="28px" height="24px" 
+                <svg class="icon grow" version="1.1"  xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="28px" height="24px" 
                 viewBox="0 0 28 24" xml:space="preserve">
                 <path d="M28,7.1C28,4.2,25.5,0,20.7,0C15.8,0,14,6.6,14,6.6S12.2,0,7.3,0C2.5,0,0,4.2,0,7.1c0,2.1-0.6,3.7,4.2,8.7
                 C6.3,18,9.7,19.7,14,24c4.3-4.3,7.8-6,9.8-8.1C28.6,10.9,28,9.2,28,7.1z"/>
                 </svg>
-                <span>Home</span>
+                <span class="grow">Home</span>
               </a>
             </li>
             <li>
